terraform/modules/network/main.tf

# Simple VPC with one subnet and outbound NAT
resource "google_compute_network" "vpc" {
  name                    = var.vpc_name
  auto_create_subnetworks = false
  description             = "VPC network"
}


# Subnet with flow logs enabled
resource "google_compute_subnetwork" "subnet" {
  name          = var.subnet_name
  ip_cidr_range = var.cidr_block
  region        = var.region
  network       = google_compute_network.vpc.id
  description   = "Subnet associated with the VPC network"

  private_ip_google_access = true

  log_config {
    aggregation_interval = "INTERVAL_1_MIN"
    flow_sampling        = 0.3
    metadata             = "INCLUDE_ALL_METADATA"
  }
}

# Basic firewall rules for the VPC
resource "google_compute_firewall" "allow-internal" {
  name         = "${var.vpc_name}-allow-internal"
  network      = google_compute_network.vpc.name
  description  = "Firewall rule allowing internal traffic within the VPC"

  allow {
    protocol = "tcp"
    ports    = ["0-65535"]
  }

  allow {
    protocol = "udp"
    ports    = ["0-65535"]
  }

  source_ranges = [var.cidr_block]

  log_config {
    metadata = "INCLUDE_ALL_METADATA"
  }
}

# Allow SSH and ICMP from the internet
resource "google_compute_firewall" "allow-ssh-icmp" {
  name         = "${var.vpc_name}-allow-ssh-icmp"
  network      = google_compute_network.vpc.name
  description  = "Firewall rule allowing ssh and icmp within the VPC"

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = ["0.0.0.0/0"]

  log_config {
    metadata = "INCLUDE_ALL_METADATA"
  }
}

# Allow HTTP/HTTPS to reach the VM web page
resource "google_compute_firewall" "allow-http" {
  name        = "${var.vpc_name}-allow-http"
  network     = google_compute_network.vpc.name
  description = "Firewall rule allowing http and https to the VPC"

  allow {
    protocol = "tcp"
    ports    = ["80", "443"]
  }

  source_ranges = ["0.0.0.0/0"]

  log_config {
    metadata = "INCLUDE_ALL_METADATA"
  }
}

# Cloud Router as base for NAT
resource "google_compute_router" "router" {
  name        = "${var.vpc_name}-router"
  region      = var.region
  network     = google_compute_network.vpc.name
  description = "Cloud router for managing dynamic routes"
}

# NAT gives internet egress without public IPs on VMs
resource "google_compute_router_nat" "nat" {
  name                               = "${var.vpc_name}-nat"
  router                             = google_compute_router.router.name
  region                             = var.region
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"

  log_config {
    enable = true
    filter = "ERRORS_ONLY"
  }
}
